# workflow_orchestration

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Coral.icns  DEVELOP.md  LICENSE  PROTOCOL.md  README.md  RELEASE.md  ROADMAP_FILE_DIFF_VIEWER.md  dashboard.py  entitlements.plist  index.html  launch_fleet.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup_app.py  test.md
.claude/: settings.json  statusline-command.sh  task_summaries.md
.claude/commands/: dev-screenshot.md  publish.md
.claude/hooks/: summarize_task.sh
.claude/skills/: release.md
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-macos.yml  publish.yml  release.yml
Casks/: coral.rb
Formula/: coral.rb
api/jobs/: index.html
business/marketing/: llc_launch_plan.md
business/old_stuff/: README.md  terms_of_service.html  terms_of_service.md
business/patents/: _temp_doc.md  _temp_figures.md  agent-chat-session.json  design_patent_application.md  employment_ip_analysis.md  generate_pdf.py  patent_use_case_narrative.md  utility_patent_provisional.md
business/patents/figures/: U1_system_architecture.mmd  U2_agent_spawning.mmd  U3_status_protocol_detection.mmd  U4_message_board_cursor.mmd  U5_session_sleep_wake.mmd  U6_subscription_transfer.mmd  U7_agent_communication_abstraction.mmd
business/patents_vv/: figure_requirements.md  utility_patent_provisional.md
business/tos/: coral_desktop_readme.md  coral_go_license.txt  eula.md  privacy_policy.md  tos.md
coral-go/: Makefile  PROTOCOL.md  go.mod  go.sum
coral-go/agent_docs/: README.md  board.md  scheduled-jobs.md  session-history.md  sessions.md  settings-system.md  templates.md  views.md  websockets.md  workflows.md
coral-go/cmd/coral-app/: dock_darwin.go  dock_other.go  main.go  menu_darwin.go  (+2 more)
coral-go/docs/: import-team-folder.md  spec-stable-board-identity.md  tmux-polling-optimization-spec.md
coral-go/specs/: README.md
coral-python/: CHANGELOG.md  DEVELOP.md  Dockerfile  RELEASE.md  docker-compose.yml  entitlements-app.plist  pyproject.toml  requirements-dev.txt  setup_app.py
coral-python/Formula/: coral.rb
coral-python/coral/: PROTOCOL.md  __init__.py  launch.py  launch_agents.sh  web_server.py
coral-python/doc_features/: message_board.md  system_tray.md
coral-python/docs/: CLAUDE.md
coral-python/installers/: build-linux.sh  build-windows.sh
coral-python/scripts/: Info.plist  build_macos.sh  build_windows.ps1  bundle-frontend.sh  coral.wxs  release.sh  sync-agent-docs.sh  test-macos-app.sh
doc_features/: file_diff_viewer.md
docs/: CLAUDE.md  index.md  mkdocs.yml
docs/api/: jobs.md
docs/doc_features/: agent-teams-message-board.md  git-integration.md  live-session-management.md  pulse-agent-protocol.md  scheduled-jobs.md  session-history-search.md  themes-customization.md  webhook-notifications.md
docs/docs/: agent-teams-message-board.md  git-integration.md  index.md  live-sessions.md  metrics-observability.md  multi-agent-orchestration.md  one-time-jobs.md  protocol.md  scheduled-jobs.md  session-history-search.md  webhooks.md
docs/examples/: simplify-team-board-chat.html  simplify-team-board-chat.md
docs/security/: tmux-sandbox-bypass.md
icons/: LICENSE
installers/: build-macos.sh  install-cli.sh
landing/: index.html
landing/blog/: index.html  see-it-in-action.html
launch_strategy/: medium_vibe_coding.md  reddit_communities.md
roadmap/: 04-scheduled-sessions.md  05-webhook-notifications.md  09-advanced-search.md  10-ui-cleanup.md  20-message-board.md
scripts/: Info.plist  build_macos.sh  dev-screenshot.sh  test-macos-app.sh
search/: search_index.json
specs/: ROADMAP_CROSS_SERVER_BOARDS.md
specs/static/: pause_resume.md
src/: PROTOCOL.md  dashboard.py  launch_agents.sh  launch_fleet.sh
src/agent_fleet/: dashboard.py  launch_agents.sh
src/coral/: config.py  tray.py  web_server.py
src/corral/: PROTOCOL.md  git_poller.py  hook_agentic_state.py  hook_task_sync.py  launch.py  launch_agents.sh  log_streamer.py  session_indexer.py  session_manager.py  session_store.py  task_detector.py  utils.py  web_server.py
tests/: conftest.py  parity_harness.py  test_agent_icons.py  test_agentic_state.py  test_board_notifier.py  test_board_proxy.py  test_cli_server_flag.py  test_db_concurrency.py  test_discover_skills.py  test_log_streamer.py  test_message_check.py  test_messageboard_api.py  test_messageboard_store.py  test_performance_paths.py  test_persistent_sessions.py  test_pulse_wrapping.py  test_receive_modes.py  test_remote_board_poller.py  test_remote_boards.py  test_renderers.js  test_search_files.py  test_session_store.py  test_task_sync.py  test_templates.py  test_tray.py  test_unified_chat_history.py  test_utils.py  test_waiting_for_input.py  test_web_server.py
tests/frontend/: acf_model_field.test.js  package.json  run.sh  terminal_scroll.test.js
tests/parity/: test_scenarios.py
tests/stress/: run.sh  run_jobs.sh  run_workflow.sh
(+447 files in other folders)
