[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-corral"
version = "0.3.0"
description = "A multi-agent orchestration system for managing AI coding agents (Claude and Gemini) in parallel git worktrees with a real-time web dashboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
]
authors = [
    { name = "Chris Knorowski" }
]
keywords = [
    "ai",
    "agents",
    "claude",
    "gemini",
    "orchestration",
    "tmux",
    "multi-agent",
    "coding-agents",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/cdknorow/Corral"
Repository = "https://github.com/cdknorow/Corral"
Issues = "https://github.com/cdknorow/Corral/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
corral = "corral.web_server:main"
corral-dashboard = "corral.web_server:main"
launch-corral = "corral.launch:main"
corral-hook-task-sync = "corral.hook_task_sync:main"
corral-hook-agentic-state = "corral.hook_agentic_state:main"

[tool.setuptools.package-data]
corral = ["PROTOCOL.md", "launch_agents.sh", "templates/*.html", "static/*.css", "static/*.js", "static/*.png", "static/*.ico"]

[tool.setuptools.packages.find]
where = ["src"]
