[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-coral"
version = "2.5.0"
description = "A multi-agent orchestration system for managing AI coding agents (Claude and Gemini) in parallel git worktrees with a real-time web dashboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
]
authors = [
    { name = "Chris Knorowski" }
]
keywords = [
    "ai",
    "agents",
    "claude",
    "gemini",
    "orchestration",
    "tmux",
    "multi-agent",
    "coding-agents",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/cdknorow/coral"
Repository = "https://github.com/cdknorow/coral"
Issues = "https://github.com/cdknorow/coral/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
tray = [
    "rumps>=0.4.0",
]

[project.scripts]
coral = "coral.web_server:main"
coral-dashboard = "coral.web_server:main"
launch-coral = "coral.launch:main"
coral-hook-task-sync = "coral.hooks.task_state:main"
coral-hook-agentic-state = "coral.hooks.agentic_state:main"
coral-hook-message-check = "coral.hooks.message_check:main"
coral-board = "coral.messageboard.cli:main"
coral-tray = "coral.tray:main"


[tool.setuptools.package-data]
coral = ["PROTOCOL.md", "launch_agents.sh", "messageboard/AGENT_GUIDE.md", "templates/*.html", "templates/includes/*.html", "templates/includes/views/*.html", "static/*.css", "static/css/*.css", "static/*.js", "static/*.png", "static/*.ico", "bundled_themes/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
